[package]
name = "oasis-chain"
version = "0.3.0"
license = "GPL-3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>", "Parity Technologies <admin@parity.io>"]

[dependencies]
ekiden-crypto = { path = "./ekiden_crypto" }
ekiden-keymanager = { path = "./ekiden_keymanager" }

elastic-array = "0.10"
zeroize = "0.6"
log = "0.4"
parking_lot = "0.5"
rayon = "1.0"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
signal-hook = "0.1.8"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-pubsub = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
lazy_static = "1.3.0"
wasmi = "0.4"
ethcore = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
ethcore-bytes = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
ethcore-transaction = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
hashdb = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
rlp = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
rlp_compress = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
parity-reactor = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
parity-rpc = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
keccak-hash = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
kvdb = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
mem = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
common-types = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
vm = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }

clap = "2.29.1"
simple_logger = "1.3.0"
rand = "0.4"
tokio = "0.1.17"
tokio-threadpool = "0.1.14"
failure = "0.1.5"
# TODO: Change to released version when 0.10.0 is released.
serde_cbor = { git = "https://github.com/pyfisch/cbor", rev = "114ecaeac53799d0bf81ca8d1b980c7c419d76fe" }

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
hex = "0.3"

[features]
default = ["pubsub"]
pubsub = []

# temporary fix for incompatibility between jsonrpc and ws-rs
[patch."https://github.com/tomusdrw/ws-rs"]
ws = { git = "https://github.com/oasislabs/ws-rs", branch = "ekiden" }

[patch.crates-io]
# TODO: Remove when merged upstream (briansmith/ring#738).
ring = { git = "https://github.com/akash-fortanix/ring", branch = "sgx-target" }
# TODO: Remove when merged upstream (rust-lang-deprecated/rustc-serialize#195).
rustc-serialize = { git = "https://github.com/jethrogb/rustc-serialize", branch = "portability" }

[[bin]]
name = "oasis-chain"
path = "bin/main.rs"

[workspace]
members = [
    "ekiden_crypto",
    "ekiden_keymanager",
]
