[package]
name = "ekiden-crypto"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
byteorder = "1.3.1"
deoxysii = { git = "https://github.com/oasisprotocol/deoxysii-rust" }
ed25519-dalek = "1.0.0-pre.3"
failure = "0.1.5"
hmac = "0.7.1"
rand = "0.7.3"
rustc-hex = "2.0.1"
serde = "1.0.71"
serde_derive = "1.0"
sha2 = "0.8.1"
untrusted = "0.7"
x25519-dalek = "0.6.0"
zeroize = "0.6"
